<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>novatel_oem7_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="xfy@todo.todo">xfy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend> #change

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend> #change

  <member_of_group>rosidl_interface_packages</member_of_group> #change

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
